# VTKwrite

./: .gitignore  README.md  pyproject.toml  setup.py
VTKwrite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: group.py  image.py  lines.py  points.py  poly_lines.py  rectilinear.py  runall.py  structured.py  structured_ex1.py  unstructured.py  unstructured_timedep.py
pyvtk/: __init__.py  __version__.py  interface.py  pyvtk.py  vtkbin.py
src/pyvtk/: __init__.py  pyvtk.py
